<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="PlanetsModel"
                type="ru.barricade2.starwarsplanetsapp.database.local.PlanetsModel"/>
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

    <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

        <ImageView
                android:id="@+id/planetImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/empty_img"
                app:imageUrl="@{ PlanetsModel.imageUrl }"/>

        <TextView
                android:text="@string/namePl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:id="@+id/textView" />

        <TextView
                android:id="@+id/planetName"
                android:layout_width="377dp"
                android:layout_height="wrap_content"
                android:text="@{ PlanetsModel.planetName }"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:gravity="start" />

        <TextView
                android:text="@string/popl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:id="@+id/textView2" />

        <TextView
                android:id="@+id/population"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{ PlanetsModel.population }"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:gravity="start"
                android:layout_marginTop="8dp"/>

        <TextView
                android:text="@string/orbit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:id="@+id/textView5" />

        <TextView
                android:id="@+id/orbitalPeriod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{ PlanetsModel.orbitalPeriod }"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:gravity="start"
                android:layout_marginTop="8dp"/>

        <TextView
                android:text="@string/rotat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:id="@+id/textView4" />

        <TextView
                android:id="@+id/rotationPeriod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{ PlanetsModel.rotationPeriod }"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:gravity="start"
                android:layout_marginTop="8dp"/>

    </LinearLayout>

    </ScrollView>

</layout>